--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "nodemon": "^2.0.16",
-    "socket.io": "^4.5.0"
+    "socket.io": "^4.5.0",
+    "sweetalert2": "^11.4.13"
   }
 }
